Updated package description

--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "apiaicaren",
   "version": "1.0.0",
-  "description": "Not Sure Yet",
+  "description": "Multipurpose Messenger Bot",
   "main": "webhook.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
